added app icon and changed apps theme color

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
     <color name="greyish">#292A2B</color>
     <color name="add_btn">#3E7CAE</color>
     <color name="background_color">#F5F4F6</color>
-    <color name="purple_200">#9F65E6</color>
+    <color name="purple_200">#875BBD</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
 </resources>
